The thirdchanges commit

--- a/learningTemplates/templates/basicApp/index.html
+++ b/learningTemplates/templates/basicApp/index.html
@@ -4,4 +4,5 @@
     <h1>Welcome to index page</h1>
      <p>{{text|join:"the second time"}}</p>
      <p>{{number}}</p>  
+     <h1>This is for test of git repository</h1>
 {%endblock%}
